# task_for_rus_hydro

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: urls.py  utils.py  views.py
backend/backend/: settings.py  urls.py
backend/templates/: base.html  index.html
backend/templates/includes/: header.html
infra/: .env.template
